# alice2d

./: Cargo.toml  LICENSE  README.md  test.html
assets/shader/: mesh_shader.wgsl  ui_shader.wgsl
crates/alice_core/: Cargo.toml
crates/alice_core/src/: allocator.rs  color.rs  lib.rs  storage.rs
crates/alice_export/: Cargo.toml
crates/alice_export/src/: lib.rs
crates/alice_function/: Cargo.toml
crates/alice_function/src/: lib.rs
crates/alice_function/src/geometry/: rect.rs
crates/alice_function/src/input/: event.rs  input_state.rs  input_system.rs  keycode.rs  mod.rs  mouse.rs  raw_input.rs  state.rs
crates/alice_function/src/paint/: context.rs  display.rs  layer.rs  mesh.rs  mod.rs  path.rs  shape.rs  stroke.rs
crates/alice_function/src/paint/label/: font.rs  mod.rs  texture_atlas.rs
crates/alice_function/src/render/: loader.rs  mod.rs  render_pipeline.rs  rhi.rs
crates/alice_function/src/render/pass/: mod.rs  ui_data.rs  ui_pass.rs
crates/alice_function/src/ui/: context.rs  id.rs  interactive.rs  layer.rs  mod.rs  painter.rs  response.rs  store.rs  style.rs  theme.rs
crates/alice_function/src/ui/container/: mod.rs  panel.rs
crates/alice_function/src/ui/utils/: id_type_map.rs  mod.rs
crates/alice_function/src/ui/widget/: button.rs  checkbox.rs  icon.rs  label.rs  mod.rs  radio.rs  ui_context.rs
crates/alice_function/src/ui/widget/text_edit/: buffer.rs  cursor.rs  mod.rs  state.rs
crates/alice_function/src/window/: converter.rs  gui.rs  mod.rs  window_config.rs  window_system.rs  winit_window.rs
examples/: hello.rs
src/: lib.rs
(+6 files in other folders)
