[package]
name = "alice_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alice_core = { path = "../alice_core" }
wgpu = "0.13.0"
winit = "0.26.1"

pollster = "0.2.5"
bytemuck = { version = "1.9.1", features = [ "derive" ] }


image = "0.24.2"
# rusttype = "0.9.2"
ab_glyph = "0.2.15"

